update model params

--- a/debugging.ipynb
+++ b/debugging.ipynb
@@ -12,18 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "id": "5705e756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d7df4962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wd = os.getcwd()\n",
+    "path = 'tokenizer.model'\n",
+    "token_path = os.path.join(wd, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "9ef6529c",
    "metadata": {},
    "outputs": [],
    "source": [
     "enc = BasicTokenizer()\n",
-    "enc.load('/Users/samswitz/GitHub/micro-research/transformer/tokenizer.model')"
+    "enc.load(token_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "4535c4f7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "1b31ccce",
    "metadata": {},
    "outputs": [
@@ -43,7 +65,7 @@
        "[365, 336, 295, 102, 117, 381, 32, 421]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,6 +73,27 @@
    "source": [
     "enc.encode(text)\n",
     "# text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "472e606a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1024"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(enc.vocab)"
    ]
   }
  ],
